@@ -1,0 +1,73 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Aeotec ZW130 WallMote Quad, base on Engineering Spec 7/29/2016 (Initial draft.)
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="1" label="Touch sound" min="0" max="1" value="1" size="1">
+            <Help>Enable/disable the touch sound</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="2" label="Touch vibration" min="0" max="1" value="1" size="1">
+            <Help>Enable/disable the touch vibration</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="3" label="Button slide function" min="0" max="1" value="1" size="1">
+            <Help>Enable/disable the function of button slide</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="4" label="Report type" min="0" max="1" value="1" size="1">
+            <Help>To configure which report will be sent when pressing the buttons</Help>
+            <Item label="Send nothing" value="0"/>
+            <Item label="Send Central Scene Command Notification" value="1"/>
+            <Item label="Send Central Scene Command Notification and Configuration report" value="2"/>
+        </Value>
+        <Value type="int" index="5" genre="config" label="Color when button is pressed" units="" value="65280" >
+            <Help>
+                To configure which color will be displayed when the button is pressed.
+                Value 1: (msb) Red.
+                Value 2: Green.
+                Value 3: Blue.
+                Value 4: Reserved
+            </Help>
+        </Value>
+        <Value type="int" index="33" genre="config" label="Test the LED, buzzer and vibrator" units="" value="0" read_only="true">
+            <Help>
+                Get the LED Strip color value
+                Value 1: (msb) Red.
+                Value 2: Green.
+                Value 3: Blue.
+                Value 4: buzzer and vibrator. (1=ON, 0=OFF)
+            </Help>
+        </Value>
+        <Value type="byte" index="39" genre="config" label="Set the low battery value" units="%" min="10" max="50" value="20">
+            <Help>
+                Set the low battery value.
+                Range: 10% - 50%.</Help>
+        </Value>
+        <Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+            <Help>Reset to factory defaults</Help>
+            <Item label="Reset to factory default setting" value="0"/>
+            <Item label="Normal" value="1"/>
+            <Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="9">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Basic Set On/Off control via Button 1"/>
+            <Group index="3" max_associations="5" label="Multilevel Switch Set Dimmer control via Button 1"/>
+            <Group index="4" max_associations="5" label="Basic Set On/Off control via Button 2"/>
+            <Group index="5" max_associations="5" label="Multilevel Switch Set Dimmer control via Button 2"/>
+            <Group index="6" max_associations="5" label="Basic Set On/Off control via Button 3"/>
+            <Group index="7" max_associations="5" label="Multilevel Switch Set Dimmer control via Button 3"/>
+            <Group index="8" max_associations="5" label="Basic Set On/Off control via Button 4"/>
+            <Group index="9" max_associations="5" label="Multilevel Switch Set Dimmer control via Button 4"/>
+        </Associations>
+    </CommandClass>
+</Product>
