@@ -66,6 +66,8 @@
 		<!-- EU-market products start with type prefix "00" -->
 		<!-- US-market products start with type prefix "01" -->
 		<!-- AU-market products start with type prefix "02" -->
+		<!-- JP-market products start with type prefix "0A" -->
+		<!-- CN-market products start with type prefix "1D" -->
 		<Product type="0004" id="0038" name="ZW056 Doorbell Gen5" config="aeotec/zw056.xml" />
 		<Product type="0104" id="0038" name="ZW056 Doorbell Gen5" config="aeotec/zw056.xml" />
 		<Product type="0204" id="0038" name="ZW056 Doorbell Gen5" config="aeotec/zw056.xml" />
@@ -126,15 +128,18 @@
 		<Product type="0004" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
 		<Product type="0104" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
 		<Product type="0204" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
-		<Product type="0304" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
-		<Product type="0904" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
+		<Product type="1D04" id="0075" name="ZW117 Range Extender 6" config="aeotec/zw117.xml"/>
 		<Product type="0002" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
 		<Product type="0102" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
 		<Product type="0202" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
         <Product type="0003" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
         <Product type="0103" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
         <Product type="0203" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
-        <Product type="0303" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
+        <Product type="0A03" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
+		<Product type="0002" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
+		<Product type="0102" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
+		<Product type="0202" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
+		<Product type="1D02" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
 	</Manufacturer>
     <Manufacturer id="0111" name="Airline Mechanical">
         <Product type="8200" id="0200" name="ZDS-100"/>
